--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
+    "color-name-list": "^10.1.0",
     "framer-motion": "^8.0.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
