--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4",
-    "wtf_wikipedia": "^10.1.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
